# pymor

./: .codecov.yml  .env  .mailmap  .markdownlint.yml  .pre-commit-config.yaml  AUTHORS.md  Makefile  dependencies.py  pyproject.toml  requirements-ci.txt  requirements-optional.txt  requirements.txt  setup.py
.binder/: Dockerfile  docker-compose.yml
.ci/gitlab/: Dockerfile.binder.tocopy  ci.yml  common_test_setup.bash  deploy_docs.bash  template.ci.py  test_vanilla.bash
.github/: fix_coverage_paths_windows.py  labeler.yml
.github/actions/miniconda_tests/: action.yml
.github/workflows/: add_labels.yml  citation.yml  conda_cov_upload.yml  conda_tests.yml  enforce-labels.yml  external_pr_mirror.yml  external_pr_unmirror.yml  git_checks.yml  link_check.yml  pyproject_toml_changes.yml
appimage/: AppRun.sh  build.sh  kernel.json  pymor.desktop
docs/: RELEASE_CHECKLIST.md
docs/source/: bibliography.bib  conf.py  k3d_sphinx.py  pymor_defaults.py  pymordocstring.py  substitutions.py  technical_overview.rst  try_on_binder.py  tutorial_external_solver_cppyy.md  tutorial_projection.md
docs/source/minimal_cpp_demo_cppyy/: model.cc  model.hh
notebooks/: ngsolve_visualization.ipynb
src/pymor/: __init__.py  basic.py
src/pymor/algorithms/: adaptivegreedy.py  basic.py  bernoulli.py  dmd.py  ei.py  eigs.py  error.py  genericsolvers.py  gram_schmidt.py  greedy.py  hapod.py  lincomb.py  lradi.py  lrradi.py  lyapunov.py  newton.py  pod.py  projection.py  rand_la.py  riccati.py  rules.py  samdp.py  simplify.py  sylvester.py  symplectic.py  timestepping.py  to_matrix.py  tr.py
src/pymor/analyticalproblems/: domaindescriptions.py  expressions.py  functions.py  text.py
src/pymor/bindings/: _patch_ufl.py  dunegdt.py  fenics.py  ngsolve.py  pymess.py  scipy.py  slycot.py
src/pymor/core/: base.py  cache.py  config.py  defaults.py  exceptions.py  logger.py  pickle.py
src/pymor/discretizers/builtin/: cg.py  fv.py  inverse.py  quadratures.py  relations.py
src/pymor/discretizers/builtin/domaindiscretizers/: default.py  gmsh.py
src/pymor/discretizers/builtin/grids/: boundaryinfos.py  gmsh.py  interfaces.py  io.py  referenceelements.py  subgrid.py  unstructured.py
src/pymor/discretizers/builtin/gui/: matplotlib_base.py  visualizers.py
src/pymor/discretizers/builtin/gui/jupyter/: __init__.py  kthreed.py  logging.py  matplotlib.py  ngsolve.py  threejs.py
src/pymor/discretizers/builtin/gui/qt/: __init__.py  gl.py
src/pymor/discretizers/dunegdt/: ipld3g.py
src/pymor/discretizers/fenics/: cg.py  domaindiscretizer.py
src/pymor/discretizers/skfem/: cg.py  domaindiscretizer.py
src/pymor/models/: basic.py  interface.py  iosys.py  mpi.py  neural_network.py  symplectic.py  transfer_function.py  transforms.py
src/pymor/operators/: block.py  constructions.py  interface.py  mpi.py  numpy.py
src/pymor/parallel/: interface.py  ipython.py  mpi.py
src/pymor/parameters/: base.py  functionals.py
src/pymor/reductors/: basic.py  bt.py  coercive.py  dwr.py  era.py  h2.py  interpolation.py  mt.py  neural_network.py  sobt.py
src/pymor/scripts/: benchmark.py
src/pymor/tools/: deprecated.py  formatrepr.py  frozendict.py  mpi.py  plot.py  random.py  table.py
src/pymor/tools/io/: matrices.py  vtk.py
src/pymor/vectorarrays/: block.py  interface.py  list.py  mpi.py  numpy.py
src/pymordemos/: analyze_pickle.py  burgers_ei.py  function_ei.py  hapod.py  heat.py  linear_optimization.py  neural_networks_instationary.py  output_error_estimation.py  output_error_estimation_with_dwr.py  parabolic_mor.py  phlti.py  symplectic_wave_equation.py  thermalblock.py  thermalblock_adaptive.py  thermalblock_simple.py
src/pymortests/: base.py  block.py  demos.py  mpi_run_demo_tests.py  neural_network.py  strategies.py  tools.py  vectorarray.py
src/pymortests/algorithms/: gram_schmidt.py  lyapunov.py  pod.py  riccati.py  samdp.py  svd_va.py
src/pymortests/core/: cache.py  config.py  logger.py  pickling.py
src/pymortests/discretizers/: affine_grid.py  grid.py
src/pymortests/fixtures/: function.py  model.py  operator.py
src/pymortests/models/: iosys_add_sub_mul.py  model.py
src/pymortests/operators/: operators.py
src/pymortests/parameters/: parameters.py
src/pymortests/reductors/: mt.py
src/pymortests/reductors/ph/: ph_irka.py
