[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymor"
dynamic = ["version"]
description = " "
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.8"
authors = [
  {name = "pyMOR developers", email = "main.developers@pymor.org"},
]
maintainers = [
  {name = "Stephan Rave", email = "stephan.rave@uni-muenster.de"},
]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "diskcache",
  "matplotlib",
  "numpy>=1.20.3",
  "packaging",
  "pillow",
  "pygments",
  "qtpy>2.0",
  "scipy>=1.5.4",
  "typer",
]

[project.optional-dependencies]
# additional dependencies for building docs via 'make docs'
docs = [
  "pymor[docs_additional,jupyter,slycot,ann]",
]
# we have the docs-related additional dependencies as a separate extra here
# to avoid pip-compile include pymor itself as a dependency, why is happening
# when recursive extras are used within recursive extras
docs-additional = [
  "bash_kernel",
  "docutils",
  "myst-nb>=0.16",
  "pybind11[global]",
  "python-slugify",
  "sphinx-autoapi>=1.8,<2",
  "sphinx-material",
  "sphinx>=5.0,<5.2",
  "sphinxcontrib-bibtex",
]
# additional dependencies for running tests via 'make tests'
tests = [
  "hypothesis[numpy,pytest]==6.56.3",  # pin hypothesis version to ensure deterministic tests
  "pytest-notebook",
  "pytest-cov",
  "pytest-datadir",
  "pytest>=7.2.1",  # 7.2.0 causes format_source tests to fail do to wrong paths in co_filename
]
# additional dependencies for pyMOR development
dev = [
  "ruff==0.0.270",  # our linter of choice
  "conda_lock==1.4.0",  # needed for make ci_conda_requirements
  "hatch",  # build frontend for building and publishing pyMOR images
]
# ## Optional dependencies for MOR algorithms
# dependencies for deep-learning based MOR methods
ann = [
  "torch>=1.11.0",
]
# dense matrix equation solver for system-theoretic methods and H-infinity norm calculation
# requires OpenBLAS headers and a Fortran compiler
slycot = [
  "slycot>=0.5.4",
]
# dense and sparse matrix equation solvers for system-theoretic methods (recommended to be installed from source)
pymess = [
  "pymess",
]
# parallelization of some MOR algorithms (e.g. greedy search) using ipyparallel
ipyparallel = [
  "ipyparallel>=6.2.5",
]
# parallelization of some MOR algorithms (e.g. greedy search) using mpi
# support for MPI-distributed solvers
mpi = [
  "mpi4py>=3.0.3",
]
# ## Builtin discretizations
# GUI support for builtin discretizations
gui = [
  "PySide2>=5.15.2.1",
  "pyopengl",
]
# jupyter integration
jupyter = [
  "jupyter_contrib_nbextensions",
  "jupyter_server>1.3,<2.0",
  "ipywidgets>7",
  "k3d>=2.15.1",
]
# VTK output for builtin discretizations
vtk = [
  "lxml",
  "meshio>=4.4",
  "pyevtk",
  "xmljson",
]
# gmsh support for builtin discretizations
gmsh = [
  "gmsh",
]
# ## Supported external solvers available on PyPI
dune = [
  "dune-xt[visualisation]>=2022.5.3; platform_system==\"Linux\" and platform_machine==\"x86_64\"",
  "dune-gdt>=2022.5.3; platform_system==\"Linux\" and platform_machine==\"x86_64\"",
]
ngsolve = [
  "ngsolve",
]
scikit-fem = [
  "scikit-fem>=6.0.0",
]
# ## Meta dependecies
# install all optional dependencies, except those requiring a compiler toolchain to build
# pymess is excluded here as installation from source is recommended by the developers
full = [
  "pymor[docs_additional,tests,dev,ann,ipyparallel,gui,jupyter,vtk,gmsh,dune,ngsolve,scikit-fem]",
]
# install all optional dependencies, including those requiring a compiler toolchain to build
full_compiled = [
  "pymor[full,slycot,mpi]",
]

[project.scripts]
pymor-demo = "pymor.scripts.pymor_demo:run"
pymor-vis = "pymor.scripts.pymor_vis:run"

[project.urls]
Homepage = "https://pymor.org"

[tool.hatch.version]
path = "src/pymor/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/docs",
  "CITATION.cff",
]

[tool.hatch.build.targets.wheel]
packages = [
  "/src/pymor",
  "/src/pymordemos",
]

[tool.pytest]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = "src/pymortests"
python_files = "*.py"
# exclude misbehaving plugin from auto load
addopts = "-p no:nb_regression --durations 10"
junit_family = "xunit2"
markers = [
  "builtin: test does not require external PDE solver",
]

# omit the runtime compiled source of pymor.analyticalproblems.expression.Expression
[tool.coverage.report]
omit = [
  "expression",
  "*/expression",
  "src/pymor/version.py",
  "pymor/version",
]

[tool.coverage.run]
relative_files = true
source = [
  "src",
]
source_pkgs = [
  "pymor",
]
omit = [
  "expression",
  "*/expression",
  "src/pymor/version.py",
  "pymor/version",
]

# each entry is a list of paths that coverage will consider to be equivalent
# this allows to map source files if pymor is imported from installed package
[tool.coverage.paths]
root = [
  "/pymor",
  "src/pymor",
]

[tool.ruff]
# this makes isort behave nicely
src = ["src"]
line-length = 120
select = [
  "F",  # Pyflakes
  "E",  # pycodestyle
  "W",  # pycodestyle
  "I",  # isort
  "N",  # pep8-naming
  "D",  # pydocstyle
  "UP",  # pyupgrade
  "YTT",  # flake8-2020
  "ASYNC",  # flake8-async
  "B",  # flake8-bugbear
  "EM",  # flake8-errmsg
  "EXE",  # flake8-executable
  "ISC",  # flake8-implicit-str-concat
  "ICN",  # flake8-import-conventions
  "PIE",  # flake8-pie
  "PT",  # flake8-pytest-style
  "Q",  # flake8-quotes
  "RSE",  # flake8-raise
  "RET",  # flake8-return
  "SIM",  # flake8-simplify
  "TID",  # flake8-tidy-imports
  "TD",  # flake8-todos
  "ERA",  # eradicate
]
ignore = [
  "F722",  # syntax error in forward annotation
  "E402",  # module level import not at top of file (due to config.require("PKG") syntax)
  "E731",  # do not assign a lambda expression, use a def
  "E741",  # do not use variables named 'l', 'O', or 'I'
  "N802",  # function name should be lowercase
  "N803",  # argument name should be lowercase (we use single capital letters everywhere for vectorarrays)
  "N806",  # same for variables in function
  "D10",  # missing docstring in module, function, method, magic, __init__, public nested class
  "D401",  # first line of docstring should be in imperative mood
  "D404",  # first word of the docstring should not be "This"
  "D405",  # the linter thinks the argument name 'parameters' is a docstring section
  "D407",  # same as above
  "D410",  # same as above
  "D411",  # same as above
  "D414",  # same as above
  "B006",  # do not use mutable data structures for argument defaults
  "B008",  # do not perform function call in argument defaults
  "B017",  # `pytest.raises(Exception)` should be considered evil
  "PT004",  # fixture does not return anything, add leading underscore
  "PT011",  # `pytest.raises(Exception)` is too broad
  "RET504",  # unnecessary variable assignment before `return` statement
  "RET505",  # unnecessary `else` after `return` statement
  "RET506",  # unnecessary `else` after `raise` statement
  "SIM108",  # use ternary operator instead of `if`-`else`-block
  "TD002",  # missing author in TODO
  "TD003",  # missing issue link on the line following this TODO
]

[tool.ruff.flake8-import-conventions]

[tool.ruff.flake8-import-conventions.extend-aliases]
scipy = ""  # don't import scipy directly
"scipy.integrate" = "spint"
"scipy.io" = "spio"
"scipy.linalg" = "spla"
"scipy.sparse" = "sps"
"scipy.sparse.linalg" = "spsla"
"scipy.stats" = "spst"

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # module imported but unused
"docs/source/conf.py" = ["ERA001"]  # commented-out code
"docs/source/substitutions.py" = ["E501"]  # line too long
"docs/source/try_on_binder.py" = ["N801"]  # class name CapWords convention
"src/pymor/algorithms/genericsolvers.py" = ["ERA001"]  # commented-out code
"src/pymor/algorithms/rules.py" = ["N801", "N805"]  # class name CapWords convention, first argument should be `self`
"src/pymor/analyticalproblems/expressions.py" = ["N801"]  # class name CapWords convention
"src/pymor/basic.py" = ["F401"]  # module imported but unused
"src/pymordemos/*" = ["F403", "F405"]  # undefined import due to pymor.basic functionality

[tool.ruff.pycodestyle]
max-doc-length = 100

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.autopep8]
max_line_length = 120
select = [
  "E1",  # fix indentation
]
